Refactored everything from Sonarr to Radarr (except the radarr-api!)

--- a/locales/en.json
+++ b/locales/en.json
@@ -7,33 +7,33 @@
         "logChatCleared": "user: %s, message: '/clear' command successfully executed",
         "logRevokeUserSelected": "user: %s, message: selected revoke user %s",
         "logRevokeConfirmationSelected": "user: %s, message: selected revoke confirmation %s",
-        "logSonarrAllSeries": "user: %s, message: all series",
-        "logSonarrConfirmCorrectShow": "user: %s, message: confirm correct show: %s",
-        "logSonarrFolderListRequested": "user: %s, message: requested to get folder list",
-        "logSonarrFoundFolders": "user: %s, message: found the following folders %s",
-        "logSonarrFoundSeasonsFolderTypes": "user: %s, message: found the following seasons folder types %s",
-        "logSonarrFoundSeries": "#1 user: %s, message: found the following series %s",
-        "logSonarrFoundSeries2": "#2 user: %s, message: found the following series %s",
-        "logSonarrFoundProfile": "#3 user: %s, message: found the following profiles %s",
-        "logSonarrFoundMonitorType": "user: %s, message: found the following monitor types %s",
-        "logSonarrLookingForExistingSeries": "user: %s, message: looking for existing series",
-        "logSonarrFoundSeriesType": "user: %s, message: found the following series types %s",
-        "logSonarrMonitorListRequest": "user: %s, message: requested to get monitor list",
-        "logSonarrProfileListRequested": "user: %s, message: requested to get profile list",
-        "logSonarrQueryCommandSent": "user: %s, message: sent '/query' command",
-        "logSonarrRefreshCommandExecuted": "user: %s, message: '/refresh' command successfully executed",
-        "logSonarrRefreshCommandSent": "user: %s, message: sent '/refresh' command",
-        "logSonarrRSSCommandSent": "user: %s, message: sent '/rss' command",
-        "logSonarrRSSCommandExecuted": "user: %s, message: '/rss' command successfully executed",
-        "logSonarrSeasonFoldersListRequested": "user: %s, message: requested to get season folders list",
-        "logSonarrUpcomingCommandSent": "user: %s, message: sent '/upcoming' command from %s to %s",
-        "logSonarrUserSeriesTypeRequested": "user: %s, message: requested to get series types list",
-        "logSonarrUserSerieRequested": "user: %s, message: requested to search for series '%s'",
-        "logSonarrWantedCommandExecuted": "user: %s, message: '/wanted' command successfully executed",
-        "logSonarrWantedCommandSent": "user: %s, message: sent '/wanted' command",
-        "logSonarrSerieAdded": "user: %s, message: added series '%s'",
-        "logSonarrSerieAddedWithOptions": "user: %s, message: adding series '%s' with options %s",
-        "logSonarrSerieCantAdd": "Could not add series, try searching again.",
+        "logRadarrAllSeries": "user: %s, message: all series",
+        "logRadarrConfirmCorrectShow": "user: %s, message: confirm correct show: %s",
+        "logRadarrFolderListRequested": "user: %s, message: requested to get folder list",
+        "logRadarrFoundFolders": "user: %s, message: found the following folders %s",
+        "logRadarrFoundSeasonsFolderTypes": "user: %s, message: found the following seasons folder types %s",
+        "logRadarrFoundSeries": "#1 user: %s, message: found the following series %s",
+        "logRadarrFoundSeries2": "#2 user: %s, message: found the following series %s",
+        "logRadarrFoundProfile": "#3 user: %s, message: found the following profiles %s",
+        "logRadarrFoundMonitorType": "user: %s, message: found the following monitor types %s",
+        "logRadarrLookingForExistingSeries": "user: %s, message: looking for existing series",
+        "logRadarrFoundSeriesType": "user: %s, message: found the following series types %s",
+        "logRadarrMonitorListRequest": "user: %s, message: requested to get monitor list",
+        "logRadarrProfileListRequested": "user: %s, message: requested to get profile list",
+        "logRadarrQueryCommandSent": "user: %s, message: sent '/query' command",
+        "logRadarrRefreshCommandExecuted": "user: %s, message: '/refresh' command successfully executed",
+        "logRadarrRefreshCommandSent": "user: %s, message: sent '/refresh' command",
+        "logRadarrRSSCommandSent": "user: %s, message: sent '/rss' command",
+        "logRadarrRSSCommandExecuted": "user: %s, message: '/rss' command successfully executed",
+        "logRadarrSeasonFoldersListRequested": "user: %s, message: requested to get season folders list",
+        "logRadarrUpcomingCommandSent": "user: %s, message: sent '/upcoming' command from %s to %s",
+        "logRadarrUserSeriesTypeRequested": "user: %s, message: requested to get series types list",
+        "logRadarrUserSerieRequested": "user: %s, message: requested to search for series '%s'",
+        "logRadarrWantedCommandExecuted": "user: %s, message: '/wanted' command successfully executed",
+        "logRadarrWantedCommandSent": "user: %s, message: sent '/wanted' command",
+        "logRadarrSerieAdded": "user: %s, message: added series '%s'",
+        "logRadarrSerieAddedWithOptions": "user: %s, message: adding series '%s' with options %s",
+        "logRadarrSerieCantAdd": "Could not add series, try searching again.",
         "logClearCache": "user: %s, message: clearing series cache",
         "logMessageClear": "user: %s, message: %s",
         "logUnrevokeUserSelected": "user: %s, message: selected unrevoke user %s",
@@ -67,14 +67,14 @@
         "botChatRevokeFailed": "Access for %s has *NOT* been revoked.",
         "botChatSonnarRSSCommandExecuted": "RSS Sync command sent",
         "botChatSonnarMatchingResults": "*Found matching results in Radarr library:*",
-        "botChatSonarrFoundNSeries": "*Found %s movie(s) *",
-        "botChatSonarrIsShowCorrect": "*Is this movie correct?*",
-        "botChatSonarrRefreshCommandExecuted": "Refresh series command sent.",
-        "botChatSonarrSelectSeason": "*Select which seasons to monitor*",
-        "botChatSonarrSerieNotFound": "Could not find the series with title '%s'",
-        "botChatSonarrWantedCommandExecuted": "Wanted command sent.",
-        "botChatSonarrSerieAdded": "Movie %s added",
-        "botChatSonarrSerieAddedBy": "Movie %s added by %s",
+        "botChatRadarrFoundNSeries": "*Found %s movie(s) *",
+        "botChatRadarrIsShowCorrect": "*Is this movie correct?*",
+        "botChatRadarrRefreshCommandExecuted": "Refresh series command sent.",
+        "botChatRadarrSelectSeason": "*Select which seasons to monitor*",
+        "botChatRadarrSerieNotFound": "Could not find the series with title '%s'",
+        "botChatRadarrWantedCommandExecuted": "Wanted command sent.",
+        "botChatRadarrSerieAdded": "Movie %s added",
+        "botChatRadarrSerieAddedBy": "Movie %s added by %s",
         "botChatUnrevoke": "*Revoked Users:*",
         "botChatUnrevokeNoUsers": "There aren't any revoked users.",
         "botChatUnrevokeConfirmation": "Are you sure you want to unrevoke access for %s ?",
@@ -133,7 +133,7 @@
         "botNotifySourcePath": "*Source Path:* %s",
         "botNotifySource Folder": "*Source Folder:* %s",
         "botNotifyDestination": "*Destination:* %s",
-        "SonarrDone": " - *Downloaded*",
+        "RadarrDone": " - *Downloaded*",
         "globalAborted": "Aborted",
         "globalArrowYes": "➸ Yes",
         "globalArrowNo": "➸ No",
@@ -141,13 +141,13 @@
         "globalNo": "No",
         "globalUnknowUser": "unknow user",
         "errorInvalidPassowrd": "Your password is invalid.",
-        "errorSonarrCouldntFindFolders": "Could not get folders, try searching again",
-        "errorSonarrCouldntGetProfile": "Could not get profiles, try searching again",
-        "errorSonarrNothingInCalendar": "Nothing in the calendar for the specified time.",
-        "errorSonarrSerieAlreadyTracked": "Series already exists and is already being tracked by Radarr",
-        "errorSonarrSerieNotFound": "could not find %s try searching again",
-        "errorSonarrUnableToLocate": "Unable to locate %s in radarr library",
-        "errorSonarrWentWrong": "Something went wrong, try searching again",
+        "errorRadarrCouldntFindFolders": "Could not get folders, try searching again",
+        "errorRadarrCouldntGetProfile": "Could not get profiles, try searching again",
+        "errorRadarrNothingInCalendar": "Nothing in the calendar for the specified time.",
+        "errorRadarrSerieAlreadyTracked": "Series already exists and is already being tracked by Radarr",
+        "errorRadarrSerieNotFound": "could not find %s try searching again",
+        "errorRadarrUnableToLocate": "Unable to locate %s in radarr library",
+        "errorRadarrWentWrong": "Something went wrong, try searching again",
 	"hello": "Hello",
 	"notAuthorized": "You are not authorized to use this bot.\n`/auth [password]` to authorize.",
 	"adminOnly": "Only the admin can use this feature.",
