--- a/locales/en.json
+++ b/locales/en.json
@@ -2,84 +2,84 @@
 	"logUserStartCommand": "user: %s, message: sent '/starts' command.",
 	"logBotInitialisation": "radarr bot %s initialized.",
 	"logUserHelpCommand": "user: %s, message: sent '/help' command",
-        "logUserCidCommand": "user: %s, message: queried Chat ID %s",
-        "logChatClearing": "user: %s, message: sent '/clear' command",
-        "logChatCleared": "user: %s, message: '/clear' command successfully executed",
-        "logRevokeUserSelected": "user: %s, message: selected revoke user %s",
-        "logRevokeConfirmationSelected": "user: %s, message: selected revoke confirmation %s",
-        "logRadarrAllSeries": "user: %s, message: all series",
-        "logRadarrConfirmCorrectShow": "user: %s, message: confirm correct show: %s",
-        "logRadarrFolderListRequested": "user: %s, message: requested to get folder list",
-        "logRadarrFoundFolders": "user: %s, message: found the following folders %s",
-        "logRadarrFoundSeasonsFolderTypes": "user: %s, message: found the following seasons folder types %s",
-        "logRadarrFoundSeries": "#1 user: %s, message: found the following series %s",
-        "logRadarrFoundSeries2": "#2 user: %s, message: found the following series %s",
-        "logRadarrFoundProfile": "#3 user: %s, message: found the following profiles %s",
-        "logRadarrFoundMonitorType": "user: %s, message: found the following monitor types %s",
-        "logRadarrLookingForExistingSeries": "user: %s, message: looking for existing series",
-        "logRadarrFoundSeriesType": "user: %s, message: found the following series types %s",
-        "logRadarrMonitorListRequest": "user: %s, message: requested to get monitor list",
-        "logRadarrProfileListRequested": "user: %s, message: requested to get profile list",
-        "logRadarrQueryCommandSent": "user: %s, message: sent '/query' command",
-        "logRadarrRefreshCommandExecuted": "user: %s, message: '/refresh' command successfully executed",
-        "logRadarrRefreshCommandSent": "user: %s, message: sent '/refresh' command",
-        "logRadarrRSSCommandSent": "user: %s, message: sent '/rss' command",
-        "logRadarrRSSCommandExecuted": "user: %s, message: '/rss' command successfully executed",
-        "logRadarrSeasonFoldersListRequested": "user: %s, message: requested to get season folders list",
-        "logRadarrUpcomingCommandSent": "user: %s, message: sent '/upcoming' command from %s to %s",
-        "logRadarrUserSeriesTypeRequested": "user: %s, message: requested to get series types list",
-        "logRadarrUserSerieRequested": "user: %s, message: requested to search for series '%s'",
-        "logRadarrWantedCommandExecuted": "user: %s, message: '/wanted' command successfully executed",
-        "logRadarrWantedCommandSent": "user: %s, message: sent '/wanted' command",
-        "logRadarrSerieAdded": "user: %s, message: added series '%s'",
-        "logRadarrSerieAddedWithOptions": "user: %s, message: adding series '%s' with options %s",
-        "logRadarrSerieCantAdd": "Could not add series, try searching again.",
-        "logClearCache": "user: %s, message: clearing series cache",
-        "logMessageClear": "user: %s, message: %s",
-        "logUnrevokeUserSelected": "user: %s, message: selected unrevoke user %s",
-        "logUnrevokeConfirmationSelected": "user: %s, message: selected unrevoke confirmation %s",
-        "logWarnError": "user: %s message: %s",
-        "logAclUpdated": "the access control list was updated",
-        "logAclFileFound": "acl file found %s",
-        "logAclInvalidSyntax": "Invalid acl file, please make sure the file is in JSON format.",
-        "logAclInvalidFile": "acl file not found, copying from template",
-        "botChatCid": "The current Chat ID: %s",
-        "botChatClear": "All previously sent commands have been cleared, yey!",
-        "botChatQuerySeriesConfirm": "user: %s, message: confirm the series %s",
-        "botChatQuerySeriesChoose": "user: %s, message: choose the series %s",
-        "botChatQueryProfileChoose": "user: %s, message: choose the profile '%s'",
-        "botChatQueryTypeChoose": "user: %s, message: choose the type '%s'",
-        "botChatQueryFolderChoose": "user: %s, message: choose the folder '%s'",
-        "botChatQuerySeasonFolderChoose": "user: %s, message: choose the season folder '%s'",
-        "botChatQuerySearchNow": "user: %s, message: search movie now '%s'",
-        "botChatAuthAlreadyAuthorized_1": "You're already authorized.",
-        "botChatAuthAlreadyAuthorized_2": "Type /start to begin.",
-        "botChatAuthIsRevoked_1": "Your access has been revoked and cannot reauthorize.",
-        "botChatAuthIsRevoked_2": "Please reach out to the bot owner for support.",
-        "botChatAuthUserWasGranted": "%s has been granted access.",
-        "botChatAuthGranted_1": "You have been authorized.",
-        "botChatAuthGranted_2": "Type /start to begin.",
-        "botChatUsers": "*Allowed Users:*",
-        "botChatRevoke": "*Allowed Users:*",
-        "botChatRevokeNoUsers": "There aren't any allowed users.",
-        "botChatRevokeConfirmation": "Are you sure you want to revoke access to %s ?",
-        "botChatRevokeSuccess": "Access for %s has been revoked",
-        "botChatRevokeFailed": "Access for %s has *NOT* been revoked.",
-        "botChatSonnarRSSCommandExecuted": "RSS Sync command sent",
-        "botChatSonnarMatchingResults": "*Found matching results in Radarr library:*",
-        "botChatRadarrFoundNSeries": "*Found %s movie(s) *",
-        "botChatRadarrIsShowCorrect": "*Is this movie correct?*",
-        "botChatRadarrRefreshCommandExecuted": "Refresh series command sent.",
-        "botChatRadarrSelectSeason": "*Select which seasons to monitor*",
-        "botChatRadarrSerieNotFound": "Could not find the series with title '%s'",
-        "botChatRadarrWantedCommandExecuted": "Wanted command sent.",
-        "botChatRadarrSerieAdded": "Movie %s added",
-        "botChatRadarrSerieAddedBy": "Movie %s added by %s",
-        "botChatUnrevoke": "*Revoked Users:*",
-        "botChatUnrevokeNoUsers": "There aren't any revoked users.",
-        "botChatUnrevokeConfirmation": "Are you sure you want to unrevoke access for %s ?",
-        "botChatUnrevokeSuccessed": "Access for %s has been unrevoked",
-        "botChatUnrevokeFailed": "Access for %s has *NOT* been unrevoked.",
+	"logUserCidCommand": "user: %s, message: queried Chat ID %s",
+	"logChatClearing": "user: %s, message: sent '/clear' command",
+	"logChatCleared": "user: %s, message: '/clear' command successfully executed",
+	"logRevokeUserSelected": "user: %s, message: selected revoke user %s",
+	"logRevokeConfirmationSelected": "user: %s, message: selected revoke confirmation %s",
+	"logRadarrAllMovies": "user: %s, message: all movies",
+	"logRadarrConfirmCorrectShow": "user: %s, message: confirm correct show: %s",
+	"logRadarrFolderListRequested": "user: %s, message: requested to get folder list",
+	"logRadarrFoundFolders": "user: %s, message: found the following folders %s",
+	"logRadarrFoundSeasonsFolderTypes": "user: %s, message: found the following seasons folder types %s",
+	"logRadarrFoundSeries": "#1 user: %s, message: found the following series %s",
+	"logRadarrFoundSeries2": "#2 user: %s, message: found the following series %s",
+	"logRadarrFoundProfile": "#3 user: %s, message: found the following profiles %s",
+	"logRadarrFoundMonitorType": "user: %s, message: found the following monitor types %s",
+	"logRadarrLookingForExistingSeries": "user: %s, message: looking for existing series",
+	"logRadarrFoundSeriesType": "user: %s, message: found the following series types %s",
+	"logRadarrMonitorListRequest": "user: %s, message: requested to get monitor list",
+	"logRadarrProfileListRequested": "user: %s, message: requested to get profile list",
+	"logRadarrQueryCommandSent": "user: %s, message: sent '/query' command",
+	"logRadarrRefreshCommandExecuted": "user: %s, message: '/refresh' command successfully executed",
+	"logRadarrRefreshCommandSent": "user: %s, message: sent '/refresh' command",
+	"logRadarrRSSCommandSent": "user: %s, message: sent '/rss' command",
+	"logRadarrRSSCommandExecuted": "user: %s, message: '/rss' command successfully executed",
+	"logRadarrSeasonFoldersListRequested": "user: %s, message: requested to get season folders list",
+	"logRadarrUpcomingCommandSent": "user: %s, message: sent '/upcoming' command from %s to %s",
+	"logRadarrUserSeriesTypeRequested": "user: %s, message: requested to get series types list",
+	"logRadarrUserSerieRequested": "user: %s, message: requested to search for series '%s'",
+	"logRadarrWantedCommandExecuted": "user: %s, message: '/wanted' command successfully executed",
+	"logRadarrWantedCommandSent": "user: %s, message: sent '/wanted' command",
+	"logRadarrSerieAdded": "user: %s, message: added series '%s'",
+	"logRadarrSerieAddedWithOptions": "user: %s, message: adding series '%s' with options %s",
+	"logRadarrSerieCantAdd": "Could not add series, try searching again.",
+	"logClearCache": "user: %s, message: clearing series cache",
+	"logMessageClear": "user: %s, message: %s",
+	"logUnrevokeUserSelected": "user: %s, message: selected unrevoke user %s",
+	"logUnrevokeConfirmationSelected": "user: %s, message: selected unrevoke confirmation %s",
+	"logWarnError": "user: %s message: %s",
+	"logAclUpdated": "the access control list was updated",
+	"logAclFileFound": "acl file found %s",
+	"logAclInvalidSyntax": "Invalid acl file, please make sure the file is in JSON format.",
+	"logAclInvalidFile": "acl file not found, copying from template",
+	"botChatCid": "The current Chat ID: %s",
+	"botChatClear": "All previously sent commands have been cleared, yey!",
+	"botChatQuerySeriesConfirm": "user: %s, message: confirm the series %s",
+	"botChatQuerySeriesChoose": "user: %s, message: choose the series %s",
+	"botChatQueryProfileChoose": "user: %s, message: choose the profile '%s'",
+	"botChatQueryTypeChoose": "user: %s, message: choose the type '%s'",
+	"botChatQueryFolderChoose": "user: %s, message: choose the folder '%s'",
+	"botChatQuerySeasonFolderChoose": "user: %s, message: choose the season folder '%s'",
+	"botChatQuerySearchNow": "user: %s, message: search movie now '%s'",
+	"botChatAuthAlreadyAuthorized_1": "You're already authorized.",
+	"botChatAuthAlreadyAuthorized_2": "Type /start to begin.",
+	"botChatAuthIsRevoked_1": "Your access has been revoked and cannot reauthorize.",
+	"botChatAuthIsRevoked_2": "Please reach out to the bot owner for support.",
+	"botChatAuthUserWasGranted": "%s has been granted access.",
+	"botChatAuthGranted_1": "You have been authorized.",
+	"botChatAuthGranted_2": "Type /start to begin.",
+	"botChatUsers": "*Allowed Users:*",
+	"botChatRevoke": "*Allowed Users:*",
+	"botChatRevokeNoUsers": "There aren't any allowed users.",
+	"botChatRevokeConfirmation": "Are you sure you want to revoke access to %s ?",
+	"botChatRevokeSuccess": "Access for %s has been revoked",
+	"botChatRevokeFailed": "Access for %s has *NOT* been revoked.",
+	"botChatSonnarRSSCommandExecuted": "RSS Sync command sent",
+	"botChatRadarrMatchingResults": "*Found matching results in Radarr library:*",
+	"botChatRadarrFoundNSeries": "*Found %s movie(s) *",
+	"botChatRadarrIsShowCorrect": "*Is this movie correct?*",
+	"botChatRadarrRefreshCommandExecuted": "Refresh series command sent.",
+	"botChatRadarrSelectSeason": "*Select which seasons to monitor*",
+	"botChatRadarrSerieNotFound": "Could not find the series with title '%s'",
+	"botChatRadarrWantedCommandExecuted": "Wanted command sent.",
+	"botChatRadarrSerieAdded": "Movie %s added",
+	"botChatRadarrSerieAddedBy": "Movie %s added by %s",
+	"botChatUnrevoke": "*Revoked Users:*",
+	"botChatUnrevokeNoUsers": "There aren't any revoked users.",
+	"botChatUnrevokeConfirmation": "Are you sure you want to unrevoke access for %s ?",
+	"botChatUnrevokeSuccessed": "Access for %s has been unrevoked",
+	"botChatUnrevokeFailed": "Access for %s has *NOT* been unrevoked.",
 	"botChatHelp_1": "Below is a list of commands you have access to:",
 	"botChatHelp_2": "\n*General commands:*",
 	"botChatHelp_3": "/start to start this bot",
@@ -95,64 +95,65 @@
 	"botChatHelp_13": "/users list users",
 	"botChatHelp_14": "/revoke revoke user from bot",
 	"botChatHelp_15": "/unrevoke un-revoke user from bot",
-        "botChatWarningOwner_1": "Your User ID: %s",
-        "botChatWarningOwner_2": "Please add your User ID to the config file field labeled 'owner'.",
-        "botChatWarningOwner_3": "Please restart the bot once this has been updated.",
-        "botChatErrorFormat": "*Oh no!* %s",
-        "botNotifySerieUnknowId": "Unknown ID",
-        "botNotifySerieUnknowTitle": "Unknown Title",
-        "botNotifySerieUnknowPath": "Unknown Path",
-        "botNotifySerieUnknowTvdbId": "Unknown TVDB ID",
-        "botNotifyEpisodeUnknowFileId": "Unknown File ID",
-        "botNotifyEpisodeUnknowRelativePath": "Unknown Relative Path",
-        "botNotifyEpisodeUnknowPath": "Unknown Path",
-        "botNotifyEpisodeUnknowSeason": "Unknown Season",
-        "botNotifyEpisodeUnknowEpisode": "Unknown Episode",
-        "botNotifyEpisodeUnknowAirDates": "Unknown Air Dates",
-        "botNotifyEpisodeUnknowUtcAirDates": "Unknown UTC Air Dates",
-        "botNotifyEpisodeUnknowQuality": "Unknown Quality",
-        "botNotifyEpisodeUnknowQualityVersion": "Unknown Quality Version",
-        "botNotifyEpisodeUnknowReleaseGroup": "Unknown Release Group",
-        "botNotifyEpisodeUnknowName": "Unknown Name",
-        "botNotifyEpisodeUnknowSourcePath": "Unknown Source Path",
-        "botNotifyEpisodeUnknowSourceFolder": "Unknown Source Folder",
-        "botNotifyEpisodeImported": "*Episode Imported*",
-        "botNotifyEpisodeFormat": "%s - %sx%s",
-        "botNotifyAirDate": "*Air Date:* %s",
-        "botNotifyQuality": "*Quality:* %s",
-        "botNotifySize": "*Size:* %s MB",
-        "botNotifySeriesID": "*Serie ID:* %s",
-        "botNotifyPath": "*Path:* %s",
-        "botNotifyTvdbId": "*TVDB ID:* %s",
-        "botNotifyEpisodeId": "*Episode ID:* %s",
-        "botNotifyRelPath": "*Rel Path:* %s",
-        "botNotifyAirDateUtc": "*Air Date UTC:* %s",
-        "botNotifyQualityVersion": "*Quality Version:* %s",
-        "botNotifyReleaseGroup": "*Release Group:* %s",
-        "botNotifySource": "*Source:* %s",
-        "botNotifySourcePath": "*Source Path:* %s",
-        "botNotifySource Folder": "*Source Folder:* %s",
-        "botNotifyDestination": "*Destination:* %s",
-        "RadarrDone": " - *Downloaded*",
-        "globalAborted": "Aborted",
-        "globalArrowYes": "➸ Yes",
-        "globalArrowNo": "➸ No",
-        "globalYes": "Yes",
-        "globalNo": "No",
-        "globalUnknowUser": "unknow user",
-        "errorInvalidPassowrd": "Your password is invalid.",
-        "errorRadarrCouldntFindFolders": "Could not get folders, try searching again",
-        "errorRadarrCouldntGetProfile": "Could not get profiles, try searching again",
-        "errorRadarrNothingInCalendar": "Nothing in the calendar for the specified time.",
-        "errorRadarrSerieAlreadyTracked": "Series already exists and is already being tracked by Radarr",
-        "errorRadarrSerieNotFound": "could not find %s try searching again",
-        "errorRadarrUnableToLocate": "Unable to locate %s in radarr library",
-        "errorRadarrWentWrong": "Something went wrong, try searching again",
+	"botChatWarningOwner_1": "Your User ID: %s",
+	"botChatWarningOwner_2": "Please add your User ID to the config file field labeled 'owner'.",
+	"botChatWarningOwner_3": "Please restart the bot once this has been updated.",
+	"botChatErrorFormat": "*Oh no!* %s",
+	"botNotifySerieUnknowId": "Unknown ID",
+	"botNotifySerieUnknowTitle": "Unknown Title",
+	"botNotifySerieUnknowPath": "Unknown Path",
+	"botNotifySerieUnknowTvdbId": "Unknown TVDB ID",
+	"botNotifyEpisodeUnknowFileId": "Unknown File ID",
+	"botNotifyEpisodeUnknowRelativePath": "Unknown Relative Path",
+	"botNotifyEpisodeUnknowPath": "Unknown Path",
+	"botNotifyEpisodeUnknowSeason": "Unknown Season",
+	"botNotifyEpisodeUnknowEpisode": "Unknown Episode",
+	"botNotifyEpisodeUnknowAirDates": "Unknown Air Dates",
+	"botNotifyEpisodeUnknowUtcAirDates": "Unknown UTC Air Dates",
+	"botNotifyEpisodeUnknowQuality": "Unknown Quality",
+	"botNotifyEpisodeUnknowQualityVersion": "Unknown Quality Version",
+	"botNotifyEpisodeUnknowReleaseGroup": "Unknown Release Group",
+	"botNotifyEpisodeUnknowName": "Unknown Name",
+	"botNotifyEpisodeUnknowSourcePath": "Unknown Source Path",
+	"botNotifyEpisodeUnknowSourceFolder": "Unknown Source Folder",
+	"botNotifyEpisodeImported": "*Episode Imported*",
+	"botNotifyEpisodeFormat": "%s - %sx%s",
+	"botNotifyAirDate": "*Air Date:* %s",
+	"botNotifyQuality": "*Quality:* %s",
+	"botNotifySize": "*Size:* %s MB",
+	"botNotifySeriesID": "*Serie ID:* %s",
+	"botNotifyPath": "*Path:* %s",
+	"botNotifyTvdbId": "*TVDB ID:* %s",
+	"botNotifyEpisodeId": "*Episode ID:* %s",
+	"botNotifyRelPath": "*Rel Path:* %s",
+	"botNotifyAirDateUtc": "*Air Date UTC:* %s",
+	"botNotifyQualityVersion": "*Quality Version:* %s",
+	"botNotifyReleaseGroup": "*Release Group:* %s",
+	"botNotifySource": "*Source:* %s",
+	"botNotifySourcePath": "*Source Path:* %s",
+	"botNotifySource Folder": "*Source Folder:* %s",
+	"botNotifyDestination": "*Destination:* %s",
+	"RadarrDone": " - *Downloaded*",
+	"globalAborted": "Aborted",
+	"globalArrowYes": "➸ Yes",
+	"globalArrowNo": "➸ No",
+	"globalYes": "Yes",
+	"globalNo": "No",
+	"globalUnknowUser": "unknow user",
+	"errorInvalidPassowrd": "Your password is invalid.",
+	"errorRadarrCouldntFindFolders": "Could not get folders, try searching again",
+	"errorRadarrCouldntGetProfile": "Could not get profiles, try searching again",
+	"errorRadarrNothingInCalendar": "Nothing in the calendar for the specified time.",
+	"errorRadarrSerieAlreadyTracked": "Series already exists and is already being tracked by Radarr",
+	"errorRadarrSerieNotFound": "could not find %s try searching again",
+	"errorRadarrUnableToLocate": "Unable to locate %s in radarr library",
+	"errorRadarrWentWrong": "Something went wrong, try searching again",
 	"hello": "Hello",
 	"notAuthorized": "You are not authorized to use this bot.\n`/auth [password]` to authorize.",
 	"adminOnly": "Only the admin can use this feature.",
 	"selectFromMenu": "\nPlease select from the menu below.",
-        "selectSeriesType": "*Select which type of series*",
-        "askUsingSeasonFolders": "*Would you like to use season folders?*",
-        "searchForMovieNow": "*Would you like to search for the movie now?*"
+	"selectSeriesType": "*Select which type of series*",
+	"askUsingSeasonFolders": "*Would you like to use season folders?*",
+	"searchForMovieNow": "*Would you like to search for the movie now?*",
+	"logRadarrAllSeries": "logRadarrAllSeries"
 }
