added additional help documentation for /library command

--- a/locales/en.json
+++ b/locales/en.json
@@ -85,16 +85,17 @@
 	"botChatHelp_3": "/start to start this bot",
 	"botChatHelp_4": "/help to for this list of commands",
 	"botChatHelp_5": "`/query [movie]` add new movie",
-	"botChatHelp_6": "`/library [movie]` search Radarr library",
-	"botChatHelp_7": "/upcoming shows upcoming movies",
-	"botChatHelp_8": "/clear clear all previous commands",
-	"botChatHelp_9": "\n*Admin commands:*",
-	"botChatHelp_10": "/wanted search all missing/wanted movies",
-	"botChatHelp_11": "/rss perform an RSS Sync",
-	"botChatHelp_12": "/refresh refreshes all series",
-	"botChatHelp_13": "/users list users",
-	"botChatHelp_14": "/revoke revoke user from bot",
-	"botChatHelp_15": "/unrevoke un-revoke user from bot",
+	"botChatHelp_6": "/library List all library *Warning - can be large*",
+	"botChatHelp_7": "/library [movie] search Radarr library",
+	"botChatHelp_8": "/upcoming shows upcoming movies",
+	"botChatHelp_9": "/clear clear all previous commands",
+	"botChatHelp_10": "\n*Admin commands:*",
+	"botChatHelp_11": "/wanted search all missing/wanted movies",
+	"botChatHelp_12": "/rss perform an RSS Sync",
+	"botChatHelp_13": "/refresh refreshes all series",
+	"botChatHelp_14": "/users list users",
+	"botChatHelp_15": "/revoke revoke user from bot",
+	"botChatHelp_16": "/unrevoke un-revoke user from bot",
 	"botChatWarningOwner_1": "Your User ID: %s",
 	"botChatWarningOwner_2": "Please add your User ID to the config file field labeled 'owner'.",
 	"botChatWarningOwner_3": "Please restart the bot once this has been updated.",
