fixed API call for refreshMovies and updated bot help

--- a/locales/en.json
+++ b/locales/en.json
@@ -69,7 +69,7 @@
     "botChatRadarrMatchingResults": "*Found matching results in Radarr library:*",
     "botChatRadarrFoundNSeries": "*Found %s movie(s) *",
     "botChatRadarrIsShowCorrect": "*Is this movie correct?*",
-    "botChatRadarrRefreshCommandExecuted": "Refresh series command sent.",
+    "botChatRadarrRefreshCommandExecuted": "Refresh movies command sent.",
     "botChatRadarrSelectSeason": "*Select which seasons to monitor*",
     "botChatRadarrSerieNotFound": "Could not find the series with title '%s'",
     "botChatRadarrWantedCommandExecuted": "Wanted command sent.",
@@ -92,7 +92,7 @@
     "botChatHelp_10": "\n*Admin commands:*",
     "botChatHelp_11": "/wanted search all missing/wanted movies",
     "botChatHelp_12": "/rss perform an RSS Sync",
-    "botChatHelp_13": "/refresh refreshes all series",
+    "botChatHelp_13": "/refresh refreshes all movies",
     "botChatHelp_14": "/users list users",
     "botChatHelp_15": "/revoke revoke user from bot",
     "botChatHelp_16": "/unrevoke un-revoke user from bot",
