--- a/locales/en.json
+++ b/locales/en.json
@@ -16,7 +16,7 @@
 	"logRadarrFoundMovies2": "#2 user: %s, message: found the following series %s",
 	"logRadarrFoundProfile": "#3 user: %s, message: found the following profiles %s",
 	"logRadarrFoundMonitorType": "user: %s, message: found the following monitor types %s",
-	"logRadarrLookingForExistingMovies": "user: %s, message: looking for existing movie",
+	"logRadarrLookingForExistingMovie": "user: %s, message: looking for existing movie",
 	"logRadarrFoundSeriesType": "user: %s, message: found the following series types %s",
 	"logRadarrMonitorListRequest": "user: %s, message: requested to get monitor list",
 	"logRadarrProfileListRequested": "user: %s, message: requested to get profile list",
@@ -30,7 +30,7 @@
 	"logRadarrUserMovieRequested": "user: %s, message: requested to search for movie '%s'",
 	"logRadarrWantedCommandExecuted": "user: %s, message: '/wanted' command successfully executed",
 	"logRadarrWantedCommandSent": "user: %s, message: sent '/wanted' command",
-	"logRadarrSerieAdded": "user: %s, message: added movie '%s'",
+	"logRadarrMovieAdded": "user: %s, message: added movie '%s'",
 	"logRadarrMovieAddedWithOptions": "user: %s, message: adding movie '%s' with options %s",
 	"logRadarrMovieCantAdd": "Could not add movie, try searching again.",
 	"logClearCache": "user: %s, message: clearing series cache",
@@ -44,7 +44,7 @@
 	"logAclInvalidFile": "acl file not found, copying from template",
 	"botChatCid": "The current Chat ID: %s",
 	"botChatClear": "All previously sent commands have been cleared, yey!",
-	"botChatQueryMovieonfirm": "user: %s, message: confirm the movie %s",
+	"botChatQueryMovieConfirm": "user: %s, message: confirm the movie %s",
 	"botChatQuerySeriesChoose": "user: %s, message: choose the series %s",
 	"botChatQueryProfileChoose": "user: %s, message: choose the profile '%s'",
 	"botChatQueryTypeChoose": "user: %s, message: choose the type '%s'",
@@ -155,7 +155,4 @@
 	"selectSeriesType": "*Select which type of series*",
 	"askUsingSeasonFolders": "*Would you like to use season folders?*",
 	"searchForMovieNow": "*Would you like to search for the movie now?*",
-	"logRadarrAllSeries": "logRadarrAllSeries",
-	"botChatQueryMovieConfirm": "botChatQueryMovieConfirm",
-	"logRadarrLookingForExistingMovie": "logRadarrLookingForExistingMovie"
 }
