fixed en locale file

--- a/locales/en.json
+++ b/locales/en.json
@@ -154,5 +154,5 @@
 	"selectFromMenu": "\nPlease select from the menu below.",
 	"selectSeriesType": "*Select which type of series*",
 	"askUsingSeasonFolders": "*Would you like to use season folders?*",
-	"searchForMovieNow": "*Would you like to search for the movie now?*",
+	"searchForMovieNow": "*Would you like to search for the movie now?*"
 }
