Fixed sorting of upcoming movies and modified message to state rls type.

--- a/locales/en.json
+++ b/locales/en.json
@@ -136,6 +136,8 @@
 	"botNotifySource Folder": "*Source Folder:* %s",
 	"botNotifyDestination": "*Destination:* %s",
 	"RadarrDone": " - *Downloaded*",
+	"RadarrInCinemas": "_In Cinemas_",
+	"RadarrPhysical": "_Physical_",
 	"globalAborted": "Aborted",
 	"globalArrowYes": "➸ Yes",
 	"globalArrowNo": "➸ No",
